--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.45.4",
+    "@types/leaflet": "^1.9.14",
     "framer-motion": "^11.11.11",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^6.26.2"
   },
