--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
     "@supabase/supabase-js": "^2.39.7",
+    "clsx": "^2.1.0",
     "framer-motion": "^11.11.17",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.344.0",
@@ -18,7 +20,8 @@
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.22.3",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
